VPC+ALB/sg.tf
# create sg for alb
resource "aws_security_group" "alb_sg" {
  vpc_id = aws_vpc.main.id
  tags = { 
    Name = "Alb-sg" 
    }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
# create sg for ec2
resource "aws_security_group" "ec2_sg" {
  vpc_id = aws_vpc.main.id
  tags = { 
    Name = "ec2-sg" 
    }

  
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
